[package]
name = "lox-lang"
version = "0.0.1"
authors = ["George Kaplan <george@georgekaplan.xyz>"]
edition = "2018"
license = "MIT"
keywords = ["interpreter", "lox", "compiler", "embeddable", "script"]
categories = ["parser-implementations", "command-line-utilities"]
default-run = "loxi"

[features]
default = []

# log messages from scanner
trace-scanning = []
# log messages during compilation
trace-compilation = []
# log debug traces of each instruction at runtime
trace-execution = []
# log garbage collection activity
trace-gc = []
# run garbage collector on every allocation
stress-test-gc = []

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
log = "0.4.8"
simplelog = "0.7.6"
