[package]
name = "lox-lang"
description = "A Lox language runtime for Rust"
version = "0.0.1"
authors = ["George Kaplan <george@georgekaplan.xyz>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/g-s-k/lox-lang"
keywords = ["interpreter", "lox", "compiler", "embeddable", "script"]
categories = ["parser-implementations", "command-line-utilities"]
default-run = "loxi"

[features]
default = []

# log messages from scanner
trace-scanning = []
# log messages during compilation
trace-compilation = []
# log debug traces of each instruction at runtime
trace-execution = []
# log garbage collection activity
trace-gc = []
# run garbage collector on every allocation
stress-test-gc = []

[dependencies]
clap = "3.0.0-beta.1"
log = "0.4.8"
simplelog = "0.7.6"
lazy_static = "1.4.0"
jemallocator = "0.3.2"

[profile.release]
lto = "fat"
codegen-units = 1
debug = true
panic = "abort"
